# playground

./: .clang-format  .gitignore  Directory.Build.props  Directory.Build.targets  LICENSE
Expected/: Expected.sln
Expected/Expected/: Expected.Bind.cs  Expected.cs  Program.cs
Expected/Expected/Properties/: AssemblyInfo.cs
FSharp/DataStructuresAndAlgorithms/: App.config  AssemblyInfo.fs  DataStructuresAndAlgorithms.fsproj  packages.config
FSharp/DataStructuresAndAlgorithms/Chapter3/: LinkedList.fs  MutableLinkedList.fs
FSharp/DataStructuresAndAlgorithms/Scripts/: load-project-debug.fsx  load-references-debug.fsx
FSharp/EmbedFSharp/: EmbedFSharp.sln
FSharp/EmbedFSharp/EmbedFSharp/: App.config  Program.cs
FSharp/EmbedFSharp/EmbedFSharp/Properties/: AssemblyInfo.cs
FSharp/EmbedFSharp/EmbedFSharp/ScriptInterfaces/: MyAppAccessor.cs  ScriptContext.cs
FlagsDependency/: FlagsDependency.sln
FlagsDependency/FlagsDependency/: FlagsDependency.cpp  FlagsDependency.vcxproj  FlagsDependency.vcxproj.filters  Sum.asm
LifeTimeService/: LifeTimeService.sln
LifeTimeService/LifeTimeService/: Program.cs
LifeTimeService/LifeTimeService/Properties/: AssemblyInfo.cs
LinuxProcess/: LinuxProcess.sln
LinuxProcess/LinuxProcess/: LinuxProcess.vcxproj  appmain.c  const.c  const.h  main.c
SendFd/: SendFd.sln
SendFd/SendFd/: main.c
src/CSharp/Expected/Expected/: Expected.cs  Expected.csproj  Program.cs
src/CSharp/RecordTypeBuilderGenerator/: RecordTypeBuilderGenerator.sln
src/CSharp/RecordTypeBuilderGenerator/RecordTypeBuilderGenerator/: CodeFixProvider.cs  Descriptors.cs  DiagnosticAnalyzer.cs  RecordTypeBuilderGenerator.csproj  SR.Designer.cs  Utils.cs
src/CSharp/RecordTypeBuilderGenerator/RecordTypeBuilderGenerator.Test/: AnalyzerTest.cs  RecordTypeBuilderGenerator.Test.csproj  TestUtils.cs
src/CSharp/RecordTypeGenerator/: Directory.Build.props  RecordTypeGenerator.sln
src/CSharp/RecordTypeGenerator/PlaygroundConsole/: PlaygroundConsole.csproj  PlaygroundConsoleProgram.cs
src/CSharp/RecordTypeGenerator/RecordTypeGenerator/: Descriptors.cs  RecordTypeGenerator.csproj  SR.Designer.cs  (+3 more)
src/CSharp/RecordTypeGenerator/RecordTypeGenerator.Test/: RecordTypeGenerator.Test.csproj  RecordTypeGeneratorUnitTests.cs
src/CSharp/XunitExtraParameter/: .runsettings  UnitTest1.cs  XunitExtraParameter.csproj  XunitExtraParameter.sln
src/CoreFx/LibWithNativeCode/: BuildAndRun.ps1  LibWithNativeCode.sln
src/CoreFx/LibWithNativeCode/NativeLib/: BuildNativeLib.ps1  CMakeLists.txt  Makefile  Makefile.win  NativeLib.version  Subbuild-linux.sh  Subbuild-win.ps1  lib.c  toolchain-msvc.cmake  ubuntu-x64-gcc-18.04.Dockerfile  win-buildtools2017.Dockerfile
src/CoreFx/TruelyAsyncIO/: TruelyAsyncIO.sln
src/FSharp/DataStructuresAndAlgorithms/: App.config  AssemblyInfo.fs  DataStructuresAndAlgorithms.fsproj  DataStructuresAndAlgorithms.sln
src/Linux/ChildProcessExperiment/: .editorconfig  CMakeLists.txt  CMakeSettings.json  ChildProcessExperiment.sln
src/Linux/ChildProcessExperiment/ChildProcessExperiment/: AncillaryDataSocket.cpp  AncillaryDataSocket.hpp  Base.cpp  Base.hpp  BinaryReader.hpp  BinaryWriter.hpp  CMakeLists.txt  ChildProcessExperiment.vcxproj  Client.cpp  Client.hpp  ErrnoExceptions.hpp  ExactBytesIO.cpp  ExactBytesIO.hpp  MiscHelpers.cpp  MiscHelpers.hpp  Protocol.md  Request.cpp  Request.hpp  Service.cpp  Service.hpp  SignalHandler.cpp  SignalHandler.hpp  SocketHelpers.cpp  SocketHelpers.hpp  Subchannel.cpp  Subchannel.hpp  UniqueResource.hpp  Wrappers.cpp  Wrappers.hpp  WriteBuffer.cpp  WriteBuffer.hpp  main.cpp
src/Linux/LinuxProcess/: LinuxProcess.sln
src/Linux/SendFd/: SendFd.sln
src/NetFx/TryStreamJsonRpc/: TryStreamJsonRpc.sln
src/NuGet/CxxCliPackage/: .gitignore  Asmichi.CxxCliPackage.nuspec  CxxCliClassLibrary.sln  CxxCliConsumerApp.sln  CxxCliConsumerAppOldStyle.sln  NuGet.Config  run.cmd
src/Tools/: UpdateAllVisualStudioInstances.ps1
src/Tools/NormalizeEol/: NormalizeEol.sln
src/Tools/RemoveBom/: RemoveBom.sln
src/Vsix/Misc/: Command1.cs
src/Windows/MassivelyConcurrentCreateProcess/: MassivelyConcurrentCreateProcess.cpp  MassivelyConcurrentCreateProcess.sln  MassivelyConcurrentCreateProcess.vcxproj  MassivelyConcurrentCreateProcess.vcxproj.filters  pch.cpp  pch.h
src/Windows/Misc/: SlowVirtualQueryOnCFGRegion.cpp
tools/: AddBom.sln
tools/AddBom/: AddBom.csproj  Program.cs
tools/AddBom/Properties/: AssemblyInfo.cs
tools/RemoveBom/RemoveBom/: Program.cs
(+75 files in other folders)
